--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-div>
+<html>
+  <head>
+    
+  </head>
+<div>
   <div>
     <input type="checkbox" class="first" />
     <input type="checkbox" />
@@ -31,3 +35,4 @@ div>
   </div>
   <button align="center"> Copy Share Link </button>
 </div>
+</html>
